--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.9.3",
     "styled-components": "^5.3.9",
+    "tsparticles": "^2.9.3",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
